[package]
name = "rq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
regex = "1.5.6"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2.17", features = ["derive"] }
serde_yaml = "0.9.13"
